# ghostblade

./: .clang-format  .codespell.ignore  .editorconfig  .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  GhostBlade.mf  Makefile  README.md  SECURITY.md  stats.json
.github/: NO_CI.md
.github/scripts/: check-dts-consistency.py  check-links.sh  check-pin-consistency.py
.github/workflows/: ci.yml  docs-lint.yml  driver-build.yml  firmware-build.yml  netlist-check.yml  update-stats.yml
docs/: Makefile  architecture.md  board-quickstart.md  build-instructions.md  contributing.md  development-environment.md  faq-troubleshooting.md  flashing-guide.md  getting-started-contributors.md  getting-started-guide.md  getting-started.md  glossary.md  gpio-cross-reference.md  hardware-bringup-checklist.md  hardware-contributor-guide.md  hardware-protection-and-testpoints.md  hardware-test-procedures.md  index.md  memory-map.md  pin-assignments.md  power-sequencing.md  power-tree.md  spi-protocol-timing.md  sysfs-attributes.md  timing-diagrams.md
docs/phase1-conceptual/: architecture-and-requirements.md
docs/phase2-schematics/: component-selection-and-schematics.md
docs/phase3-pcb/: pcb-blueprints-and-layout.md
docs/phase4-software/: boot-process-and-mmio.md
firmware/rp2350b/: CMakeLists.txt  pico_sdk_import.cmake  rp2350b_memmap.ld
firmware/rp2350b/include/: battery_monitor.h  board_pins.h  cc1101_init.h  lms7002m_driver.h  rp2350b_init.h  sdr_dma.h  spi_protocol.h  st25r3916_init.h  watchdog.h
firmware/rp2350b/src/: adc_calibration.c  battery_monitor.c  cc1101_init.c  lms7002m_driver.c  main.c  peripheral_power.c  rp2350b_init.c  sdr_dma.c  sleep_wake.c  spi0_isr.c  spi_protocol.c  st25r3916_init.c  watchdog.c
hardware/bom/: ghostblade-bom-interactive.html  ghostblade-bom.csv
hardware/drc/: ghostblade-drc-rules.kicad_drc  ghostblade-erc-rules.kicad_erc
hardware/kicad/: ghostblade.kicad_pro  ghostblade.net
hardware/kicad/3dmodels/: README.md
hardware/kicad/footprints/ghostblade-footprints.pretty/: ghostblade-footprints.kicad_mod
hardware/kicad/symbols/: ghostblade-symbols.kicad_sym
software/dts/: Makefile  ghostblade-nfc-overlay.dts  ghostblade-options.dts  ghostblade-rk3576.dts  ghostblade-sleep-overlay.dts  ghostblade-wifi-overlay.dts
software/libapex/: Makefile  README.md  libapex.pc.in  setup.py
software/libapex/include/: libapex.h
software/libapex/src/: libapex.c  pyapex.c  pyapex.pyi
software/linux-drivers/: Kconfig  Makefile
software/linux-drivers/include/: apex_bridge_regs.h
software/linux-drivers/src/: apex_bridge.c
tests/: .gitignore  Makefile  README.md  hil_spi_bridge_test.sh  hitl_test.sh  test_apex_bridge.c  test_battery_monitor.c  test_cc1101_config.c  test_cc1101_lms7002m.c  test_crc_validation  test_crc_validation.c  test_libapex.c  test_libapex_framing.c  test_power_states.c  test_sleep_wake.c  test_spi0_isr.c  test_spi_protocol.c  test_st25r3916_init.c  test_watchdog.c
tools/: check_internal_links.py  check_links.py  generate_gerbers.py  validate_dts.py  validate_netlist.py
